# donut

./: make_data.ipynb  make_vocab.py  pyproject.toml  templates.py  test.py
convert_xlsx_to_html/: excel_to_html.py  generate_css_styles.py  main.py
utils/: utils.py
